--- a/src/View/samplemessage/MessageAddVisitaEnfermeria.form
+++ b/src/View/samplemessage/MessageAddVisitaEnfermeria.form
@@ -126,6 +126,9 @@
       </Constraints>
     </Component>
     <Component class="View.BotonesText.CustomTextField" name="txtVisita">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtVisitaKeyReleased"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="50" y="210" width="400" height="50"/>
