--- a/src/View/samplemessage/MessageEditTipoCodigos.form
+++ b/src/View/samplemessage/MessageEditTipoCodigos.form
@@ -71,6 +71,9 @@
       </Constraints>
     </Component>
     <Component class="View.BotonesText.CustomTextField" name="txtTipoCodigo">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTipoCodigoKeyReleased"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
