--- a/src/View/samplemessage/MessageEditVisitaEnfermeria.form
+++ b/src/View/samplemessage/MessageEditVisitaEnfermeria.form
@@ -152,6 +152,9 @@
       </Constraints>
     </Component>
     <Component class="View.BotonesText.CustomTextField" name="txtVisita">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtVisitaKeyReleased"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
