--- a/src/View/Application/form/other/VisitasEnfermeria.form
+++ b/src/View/Application/form/other/VisitasEnfermeria.form
@@ -53,8 +53,8 @@
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="btnReport" min="-2" pref="81" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="btnReport" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnAdd" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnDelete" min="-2" max="-2" attributes="0"/>
@@ -124,7 +124,7 @@
         <Component class="View.BotonesText.Buttons" name="btnReport">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/View/icons/add1.png"/>
+              <Image iconType="3" name="/View/icons/disquete.png"/>
             </Property>
           </Properties>
           <Events>
